# capture_service

./: CMakeLists.txt  Info.plist.in  LICENSE  README.md  app.plist.in  appicon.icns  com.test.app.screencapture.plist  macros.cmake  main.cpp
installer/: CMakeLists.txt
installer/config/: CMakeLists.txt  config.xml.in
